JavaScript testing with Karma and PhantomJS

--- a/package.json
+++ b/package.json
@@ -8,21 +8,38 @@
     "rxjs": "*"
   },
   "devDependencies": {
+    "chai": "*",
+    "css-loader": "*",
     "extract-text-webpack-plugin": "*",
+    "file-loader": "*",
     "gulp": "*",
     "gulp-mocha": "*",
     "gulp-util": "*",
     "html-webpack-plugin": "*",
+    "karma": "*",
+    "karma-chai": "*",
+    "karma-mocha": "*",
+    "karma-mocha-reporter": "*",
+    "karma-phantomjs-launcher": "*",
+    "karma-phantomjs-shim": "*",
+    "karma-sourcemap-loader": "*",
+    "karma-webpack": "*",
+    "less": "*",
+    "less-loader": "*",
     "less-plugin-clean-css": "*",
     "mocha": "*",
+    "mocha-loader": "*",
+    "phantomjs-prebuilt": "*",
     "rimraf": "*",
     "source-map-loader": "*",
     "stats-webpack-plugin": "*",
+    "style-loader": "*",
     "ts-loader": "*",
     "typescript": "*",
-    "webpack": "*",
+    "webpack": "<2",
     "webpack-dev-server": "*",
-    "webpack-fail-plugin": "*"
+    "webpack-fail-plugin": "*",
+    "worker-loader": "*"
   },
   "scripts": {
     "package": "gulp --gulpfile ui/gulpfile.js package"
