--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,8 @@
                                 <configuration>
                                     <executable>npm.cmd</executable>
                                     <arguments>
-                                        <commandlineArgs>run-script package</commandlineArgs>
+                                        <argument>run-script</argument>
+                                        <argument>package</argument>
                                     </arguments>
                                 </configuration>
                                 <goals>
