REST endpoint "/poller" added and documented with Swagger

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,19 @@
+
+# Polls - "poll interim" is the duration from end of a poll to start of next
+poller {
+    # Minimal allowed poll interim
+    minAllowedPollInterim = 100 milliseconds
+
+    # Default poll interim
+    defaultPollInterim = 5 seconds
+
+    # Duration to use a poll interim override on a given node before it reverts back to default
+    interimOverideDuration = 20 seconds
+
+    # Number of poll results to buffer in memory
+    pollHistorySize = 5
+}
+
 akka {
     loglevel = "INFO"
     loggers = ["akka.event.slf4j.Slf4jLogger"]
