--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "chai": "*",
     "css-loader": "*",
-    "extract-text-webpack-plugin": "*",
+    "extract-text-webpack-plugin": "<2",
     "file-loader": "*",
     "gulp": "*",
     "gulp-mocha": "*",
@@ -37,7 +37,7 @@
     "ts-loader": "*",
     "typescript": "*",
     "webpack": "<2",
-    "webpack-dev-server": "*",
+    "webpack-dev-server": "<2",
     "webpack-fail-plugin": "*",
     "worker-loader": "*"
   },
