--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,16 @@
             <artifactId>jul-to-slf4j</artifactId>
             <version>1.7.22</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.swagger-akka-http</groupId>
+            <artifactId>swagger-akka-http_${scala.compat.version}</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.megard</groupId>
+            <artifactId>akka-http-cors_${scala.compat.version}</artifactId>
+            <version>0.1.11</version>
+        </dependency>
 
         <!-- Test -->
         <dependency>
