--- a/package.json
+++ b/package.json
@@ -8,18 +8,16 @@
     "sigma": "*"
   },
   "devDependencies": {
-    "chai": "*",
     "css-loader": "*",
-    "extract-text-webpack-plugin": "<2",
+    "extract-text-webpack-plugin": "*",
     "file-loader": "*",
     "gulp": "*",
-    "gulp-mocha": "*",
     "gulp-util": "*",
+    "html-loader": "*",
     "html-webpack-plugin": "*",
+    "jasmine-core": "*",
     "karma": "*",
-    "karma-chai": "*",
-    "karma-mocha": "*",
-    "karma-mocha-reporter": "*",
+    "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
     "karma-phantomjs-shim": "*",
     "karma-sourcemap-loader": "*",
@@ -27,19 +25,17 @@
     "less": "*",
     "less-loader": "*",
     "less-plugin-clean-css": "*",
-    "mocha": "*",
-    "mocha-loader": "*",
     "phantomjs-prebuilt": "*",
     "rimraf": "*",
+    "script-loader": "*",
     "source-map-loader": "*",
     "stats-webpack-plugin": "*",
     "style-loader": "*",
     "ts-loader": "*",
     "typescript": "*",
-    "webpack": "<2",
-    "webpack-dev-server": "<2",
-    "webpack-fail-plugin": "*",
-    "worker-loader": "*"
+    "uglify-js": "*",
+    "webpack": "*",
+    "webpack-dev-server": "*"
   },
   "scripts": {
     "package": "gulp --gulpfile ui/gulpfile.js package"
