--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ insert_final_newline = true
 trim_trailing_whitespace=true
 
 [*.{js,ts,less,sbt,json}]
-indent_style = spaces
+indent_style = space
 indent_size = 2
 
 [*.html]
