--- a/package.json
+++ b/package.json
@@ -1,52 +1,86 @@
 {
   "name": "ui",
   "version": "1.0.0",
-  "description": "UI sub-project within sbt",
-  "main": "./ui/dist/bundle.js",
+  "description": "UI sub-project",
   "dependencies": {
-    "rxjs": "^5.4.0",
-    "sigma": "^1.2.0"
+    "@types/classnames": "^2.2.3",
+    "@types/react": "^16.0.5",
+    "@types/react-dom": "^15.5.4",
+    "@types/react-modal": "^2.2.1",
+    "@types/react-redux": "^5.0.5",
+    "@types/redux-immutable": "^3.0.35",
+    "@types/vis": "^4.18.4",
+    "classnames": "^2.2.5",
+    "es6-iterator": "^2.0.1",
+    "immutable": "^3.8.1",
+    "normalize.css": "^7.0.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-modal": "^2.2.4",
+    "react-redux": "^5.0.6",
+    "react-redux-typescript": "^2.3.0",
+    "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
+    "redux-observable": "^0.16.0",
+    "reselect": "^3.0.1",
+    "rxjs": "^5.4.3",
+    "tslib": "^1.7.1",
+    "typed-immutable-record": "^0.0.6",
+    "vis": "^4.20.1"
   },
   "devDependencies": {
-    "@types/jasmine": "*",
-    "@types/sigmajs": "*",
-    "@types/webcomponents.js": "*",
-    "css-loader": "*",
-    "extract-text-webpack-plugin": "*",
-    "file-loader": "*",
-    "gulp": "*",
-    "gulp-util": "*",
-    "html-loader": "*",
-    "html-webpack-plugin": "*",
-    "jasmine-core": "*",
-    "karma": "*",
-    "karma-jasmine": "*",
-    "karma-junit-reporter": "*",
-    "karma-phantomjs-launcher": "*",
-    "karma-phantomjs-shim": "*",
-    "karma-sourcemap-loader": "*",
-    "karma-webpack": "*",
-    "less": "*",
-    "less-loader": "*",
-    "less-plugin-clean-css": "*",
-    "null-loader": "*",
-    "phantomjs-prebuilt": "*",
-    "raw-loader": "*",
-    "rimraf": "*",
-    "script-loader": "*",
-    "source-map-loader": "*",
-    "stats-webpack-plugin": "*",
-    "style-loader": "*",
-    "ts-loader": "*",
-    "typescript": "*",
-    "uglify-js": "*",
-    "webpack": "*",
-    "webpack-dev-server": "*"
+    "@types/jest": "^20.0.8",
+    "@types/node": "^8.0.24",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^20.0.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "less-plugin-clean-css": "^1.5.1",
+    "npm-run": "^4.1.2",
+    "null-loader": "^0.1.1",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
+    "script-loader": "^0.7.0",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
+    "ts-jest": "^20.0.10",
+    "ts-loader": "^2.3.2",
+    "typescript": "^2.5.1",
+    "webpack": "^3.5.4",
+    "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
+    "clean": "gulp --gulpfile ui/gulpfile.js clean",
     "webpack-dev-server": "gulp --gulpfile ui/gulpfile.js webpack-dev-server",
     "ci-test": "gulp --gulpfile ui/gulpfile.js test",
-    "package": "gulp --gulpfile ui/gulpfile.js package"
+    "package": "gulp --gulpfile ui/gulpfile.js package",
+    "pre-ci-package": "npm update",
+    "ci-package": "npm run package",
+    "test": "jest"
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "ui/tsconfig.json"
+      }
+    },
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json",
+      "jsx"
+    ]
   },
   "author": "Cory Prowse <cory@prowse.com>",
   "license": "UNLICENSED"
