--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,9 @@
+healthmesh {
+    httpPort = 18080
+    httpPort = ${?APP_PORT}
+    httpPathPrefix = "health-mesh"
+    httpPathPrefix = ${?APP_NAME}
+}
 
 # Polls - "poll interim" is the duration from end of a poll to start of next
 poller {
@@ -20,4 +26,25 @@ akka {
     logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
     #log-dead-letters = 10
     log-dead-letters-during-shutdown = off
+
+    http {
+        server {
+            idle-timeout = 1 day
+            request-timeout = 310 seconds
+        }
+        client {
+            connection-timeout = 60s
+            idle-timeout = 1 day
+            parsing.illegal-header-warning = off
+        }
+        host-connection-pool {
+            idle-timeout = 1 minute
+            // max-connections = 128
+            // max-open-requests = 128
+            client {
+                connecting-timeout = 1 minute
+                idle-timeout = 1 minute
+            }
+        }
+    }
 }
