--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -5,6 +5,14 @@
     "strict": true,
     "moduleResolution": "node",
     "alwaysStrict": true,
+    "allowSyntheticDefaultImports": true,
+    "allowJs": true,
+    "checkJs": true,
+    "declaration": false,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
+    "noEmitHelpers": true,
+    "jsx": "react",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -20,14 +28,16 @@
     "experimentalDecorators": true,
     "suppressImplicitAnyIndexErrors": true,
     "lib": [
+      "dom",
       "es2015",
-      "dom"
+      "es2016",
+      "es2017.object"
     ]
   },
-  "files": [
-    "./typings/require.d.ts"
-  ],
   "exclude": [
-    "../node_modules"
+    "../node_modules",
+    "gulpfile.js",
+    "webpack.dev.config.js",
+    "webpack.prd.config.js"
   ]
 }
