--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@types/react-dom": "^15.5.4",
     "@types/react-modal": "^2.2.1",
     "@types/react-redux": "^5.0.5",
-    "@types/redux-immutable": "^3.0.35",
+    "@types/redux-immutable": "^3.0.36",
     "@types/vis": "^4.18.4",
     "classnames": "^2.2.5",
     "es6-iterator": "^2.0.1",
+    "es6-promise": "^4.1.1",
     "immutable": "^3.8.1",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
@@ -30,8 +31,8 @@
   },
   "devDependencies": {
     "@types/jest": "^20.0.8",
-    "@types/node": "^8.0.24",
-    "css-loader": "^0.28.4",
+    "@types/node": "^8.0.26",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
@@ -49,7 +50,7 @@
     "script-loader": "^0.7.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
-    "ts-jest": "^20.0.10",
+    "ts-jest": "^20.0.13",
     "ts-loader": "^2.3.2",
     "typescript": "^2.5.1",
     "webpack": "^3.5.4",
