--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "UI sub-project",
   "dependencies": {
     "@types/classnames": "^2.2.3",
-    "@types/react": "^16.0.5",
-    "@types/react-dom": "^15.5.4",
-    "@types/react-modal": "^2.2.1",
+    "@types/react": "^16",
+    "@types/react-bootstrap": "^0.31.4",
+    "@types/react-dom": "^16",
     "@types/react-redux": "^5.0.5",
     "@types/redux-immutable": "^3.0.36",
     "@types/vis": "^4.18.4",
@@ -15,9 +15,9 @@
     "es6-promise": "^4.1.1",
     "immutable": "^3.8.1",
     "normalize.css": "^7.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-modal": "^2.2.4",
+    "react": "^16",
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^16",
     "react-redux": "^5.0.6",
     "react-redux-typescript": "^2.3.0",
     "redux": "^3.7.2",
@@ -27,19 +27,20 @@
     "rxjs": "^5.4.3",
     "tslib": "^1.7.1",
     "typed-immutable-record": "^0.0.6",
-    "vis": "^4.20.1"
+    "vis": "^4.20.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.8",
+    "@types/jest": "^21.1.2",
     "@types/node": "^8.0.26",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.5",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.8",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^20.0.4",
+    "jest": "^21.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "less-plugin-clean-css": "^1.5.1",
@@ -49,8 +50,8 @@
     "rimraf": "^2.6.1",
     "script-loader": "^0.7.0",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.18.2",
-    "ts-jest": "^20.0.13",
+    "style-loader": "^0.19.0",
+    "ts-jest": "^21.1.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.5.1",
     "webpack": "^3.5.4",
