--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "UI sub-project",
   "dependencies": {
     "@types/classnames": "^2.2.3",
-    "@types/react": "^16",
-    "@types/react-bootstrap": "^0.31.4",
-    "@types/react-dom": "^16",
-    "@types/react-redux": "^5.0.5",
-    "@types/redux-immutable": "^3.0.36",
-    "@types/vis": "^4.18.4",
+    "@types/react": "^16.0.3",
+    "@types/react-bootstrap": "^0.31.6",
+    "@types/react-dom": "^16.0.1",
+    "@types/react-redux": "^5.0.10",
+    "@types/redux-immutable": "^3.0.37",
+    "@types/vis": "^4.18.6",
     "classnames": "^2.2.5",
-    "es6-iterator": "^2.0.1",
+    "es6-iterator": "^2.0.3",
     "es6-promise": "^4.1.1",
-    "immutable": "^3.8.1",
-    "react": "^16",
+    "immutable": "^3.8.2",
+    "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16",
     "react-redux": "^5.0.6",
@@ -24,16 +24,16 @@
     "redux-observable": "^0.16.0",
     "reselect": "^3.0.1",
     "rxjs": "^5.4.3",
-    "tslib": "^1.7.1",
+    "tslib": "^1.8.0",
     "typed-immutable-record": "^0.0.6",
-    "vis": "^4.20.1",
+    "vis": "^4.21.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^21.1.2",
-    "@types/node": "^8.0.26",
+    "@types/jest": "^21.1.3",
+    "@types/node": "^8.0.41",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.8",
@@ -46,22 +46,22 @@
     "npm-run": "^4.1.2",
     "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.1",
-    "script-loader": "^0.7.0",
-    "source-map-loader": "^0.2.1",
+    "rimraf": "^2.6.2",
+    "script-loader": "^0.7.2",
+    "source-map-loader": "^0.2.2",
     "style-loader": "^0.19.0",
     "ts-jest": "^21.1.2",
     "ts-loader": "^2.3.2",
-    "typescript": "^2.5.1",
-    "webpack": "^3.5.4",
-    "webpack-dev-server": "^2.7.1"
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.0",
+    "webpack-dev-server": "^2.9.2"
   },
   "scripts": {
     "clean": "gulp --gulpfile ui/gulpfile.js clean",
-    "webpack-dev-server": "gulp --gulpfile ui/gulpfile.js webpack-dev-server",
+    "dev-server": "webpack-dev-server --config ui/webpack.dev.config.js",
     "ci-test": "gulp --gulpfile ui/gulpfile.js test",
     "package": "gulp --gulpfile ui/gulpfile.js package",
-    "pre-ci-package": "npm update",
+    "preci-package": "npm update",
     "ci-package": "npm run package",
     "test": "jest"
   },
