--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   "devDependencies": {
     "@types/jest": "^21.1.3",
     "@types/node": "^8.0.41",
+    "cache-loader": "^1.1.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
+    "fork-ts-checker-webpack-plugin": "^0.2.8",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.8",
     "html-loader": "^0.5.1",
@@ -50,6 +52,7 @@
     "script-loader": "^0.7.2",
     "source-map-loader": "^0.2.2",
     "style-loader": "^0.19.0",
+    "thread-loader": "^1.1.2",
     "ts-jest": "^21.1.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.5.3",
