--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "immutable": "^3.8.2",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
-    "react-dom": "^16",
+    "react-dom": "^16.0.0",
+    "react-overlays": "^0.7.3",
     "react-redux": "^5.0.6",
     "react-redux-typescript": "^2.3.0",
     "redux": "^3.7.2",
