--- a/pom.xml
+++ b/pom.xml
@@ -63,14 +63,14 @@
         </dependency>
 
         <dependency>
-            <groupId>io.reactivex</groupId>
-            <artifactId>rxjava</artifactId>
-            <version>1.3.2</version>
+            <groupId>org.typelevel</groupId>
+            <artifactId>cats-core_${scala.compat.version}</artifactId>
+            <version>1.0.0-MF</version>
         </dependency>
         <dependency>
-            <groupId>io.reactivex</groupId>
-            <artifactId>rxjava-reactive-streams</artifactId>
-            <version>1.2.1</version>
+            <groupId>io.monix</groupId>
+            <artifactId>monix_${scala.compat.version}</artifactId>
+            <version>2.3.0</version>
         </dependency>
 
         <dependency>
